# aml-ip-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  amlip.repos  network_design.md
amlip_nodes/: README.md  __run.py  package.xml  setup.cfg  setup.py
amlip_nodes/amlip_nodes/aml/: aml_computingNode.py  aml_config.py  aml_mainNode.py  aml_statusNode.py  aml_types.py  run_computingNode.py  run_mainNode.py
amlip_nodes/amlip_nodes/dds/entity/: AmlMultiserviceClient.py  AmlMultiserviceServer.py  AmlParticipant.py  AmlReader.py  AmlTopic.py  AmlTopicDataType.py  AmlWriter.py
amlip_nodes/amlip_nodes/dds/network/: aml_node_types.py  aml_topic_names.py
amlip_nodes/amlip_nodes/dds/node/: AmlDdsComputingNode.py  AmlDdsMainNode.py  AmlDdsNode.py  AmlDdsStatusNode.py  AmlNodeId.py  TopicHandler.py
amlip_nodes/amlip_nodes/exception/: Exception.py
amlip_nodes/amlip_nodes/log/: log.py
amlip_nodes/amlip_nodes/tool/: run_computingNode.py  run_mainNode.py  run_node_common.py  run_statusNode.py
amlip_nodes/tests/aml/: aml_computingNode_test.py  aml_mainNode_test.py  aml_statusNode_test.py  aml_types_test.py
amlip_nodes/tests/blackbox/: blackbox_test.py
amlip_nodes/tests/dds/node/: AmlDdsComputingNode_test.py  AmlDdsMainNode_test.py  AmlDdsNode_test.py
amlip_types/: CMakeLists.txt  README.md  colcon.pkg  package.xml
amlip_types/idl/: inference.idl  job.idl  multiservice.idl  status.idl
amlip_types/sources/py/: CMakeLists.txt  inference.cxx  inference.h  inference.i  inferencePubSubTypes.cxx  inferencePubSubTypes.h  inferencePubSubTypes.i  job.cxx  job.h  job.i  jobPubSubTypes.cxx  jobPubSubTypes.h  jobPubSubTypes.i  multiservice.cxx  multiservice.h  multiservice.i  multiservicePubSubTypes.cxx  multiservicePubSubTypes.h  multiservicePubSubTypes.i  service.cxx  service.h  service.i  servicePubSubTypes.cxx  servicePubSubTypes.h  servicePubSubTypes.i  status.cxx  status.h  status.i  statusPubSubTypes.cxx  statusPubSubTypes.h  statusPubSubTypes.i
cmake/common/: eprosima_libraries.cmake
cmake/modules/: Findminiupnpc.cmake
configurations/: DDS_ROUTER_CONFIGURATION_client.yaml  DDS_ROUTER_CONFIGURATION_server.yaml
design/: network_design.md
example_nodes/: README.md  package.xml  setup.cfg  setup.py
example_nodes/tests/: dds_test.py
example_nodes/tests/dds/: MainNodeParticipant_test.py
experiments/: experiment_discovery_server.md  experiment_docker.md  experiment_ds_different_lan.md  experiment_poc_1.md  experiment_poc_2.md  experiment_poc_3.md  prototype_examples.md
gui/: gui_app.py  gui_app_discovery_server_example.py
scripts/: AML.sh  AML_TCP.sh  dl.sh  engine.sh
scripts/configurations/: tcp_client_configuration.xml  tcp_configuration.xml  tcp_server_configuration.xml
src/cpp/DL/: DLParticipant.cpp  DLParticipant.hpp  DL_main.cpp
src/cpp/DiscoveryServer/: DiscoveryServerParticipant.cpp  DiscoveryServerParticipant.hpp  DiscoveryServer_main.cpp
src/cpp/Engine/: EngineParticipant.cpp  EngineParticipant.hpp  Engine_main.cpp
src/cpp/TCPconnection/DL/: DLParticipant.cpp  DLParticipant.hpp  DL_main.cpp
src/cpp/TCPconnection/Engine/: EngineParticipant.cpp  EngineParticipant.hpp  Engine_main.cpp
src/cpp/types/: types.hpp
src/cpp/types/Atomization/: Atomization.cxx  Atomization.h  AtomizationPubSubTypes.cxx  AtomizationPubSubTypes.h
src/cpp/types/DLOutput/: DLOutput.cxx  DLOutput.h  DLOutputPubSubTypes.cxx  DLOutputPubSubTypes.h
src/cpp/types/utils/: utils.hpp
src/cpp/upnp/: upnp.cpp
src/cpp/utils/: utils.cpp  utils.hpp
src/types/: DLOutput.idl
src/types/Atomization/: Atomization.idl
src/types/DLOutput/: DLOutput.idl
