<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amlip_types</name>
  <version>0.0.0</version>
  <description>Types package for AML-IP prototype DDS types</description>
  <maintainer email="javierparis@eprosima.com">eprosima</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fastcdr</depend>
  <depend>fastrtps</depend>
  <depend>fastdds_python</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
